[tool.poetry]
name = "yt-music-downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
run = "yt-music-downloader:main"

[tool.poetry.dependencies]
python = "^3.9"
langcodes = "3.3.0"
mutagen = "1.46.0"
Pillow = "10.0.0"
requests = "2.31.0"
yt-dlp = "2024.4.9"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
